# Warpdrive

./: README.md
Client-Server Prototypes/click_warpserver_cpp/: CMakeLists.txt  copyToDocker.sh  main.cpp
Client-Server Prototypes/pg_standalone_warpServer/: copyToDocker.sh  examplearrowarray.c  examplearrowstream.c  pg_warpserver.h  test.c
Client-Server Prototypes/pg_warpFDW/: hello_world_util.h  installcommand.sh  warpfdw--0.1.sql  warpfdw.bc  warpfdw.c  warpfdw.control
Docker/: Makefile  README.md  docker-compose-all.yml  docker-compose.yml  fixPermError.sh
Docker/benchmarkcontainer/: Dockerfile  Makefile  README.md  results.txt  runtest.sh
Docker/benchmarkcontainer/benchmarkproject/: dockerstartscript.sh  pom.xml
Docker/benchmarkcontainer/scripte/: README.md  transfer_lineitemsf1_chpg_netcat.sh  transfer_lineitemsf1_pgpg_netcat.sh
Docker/clickhouse/: README.md
Docker/clickhouse/clickhouse-jdbc-bridge/: Makefile  (+2 more)
Docker/mariadb/: Dockerfile  Dockerfile.save  Makefile  README.me  connect.cnf  privileges.sql
Docker/postgres/: Dockerfile  Makefile  README.md  docker-compose.yml  end.sh  wrapper_script_docker.sh
Docker/postgres/warpServer/: CMakeLists.txt  main.c
Docker/testclickhouse/: Dockerfile  Makefile  README.md
Docker/tpch_generator/: Makefile  README.md  docker-compose.yml
Warpdrive/: Doxyfile  Makefile  hello_world_util.h  installscript.sh  loremipsum.txt  random  randomoutput.txt  test_warp_client  test_warp_client.c  test_warp_server  test_warp_server.c  testrandomstuff.c  ucp_client_server.c  warp_client.c  warp_client.h  warp_server.c
(+253 files in other folders)
